Fix sliders style on ios devices

--- a/styles/standard-assets/popup.css
+++ b/styles/standard-assets/popup.css
@@ -154,6 +154,7 @@
     width: 600px;
     height: 15px;
     background:white;
+    border-radius: 0;
 }
  
 .value::-moz-range-thumb {
